# my-django-codebase

./: .env-example  .pre-commit-config.yaml  README.es.md  README.md  pyproject.toml
requirements/: base.txt  dev.txt
scripts/: pre-commit.sh
