[project]
name = "codebase_django"
version = "0.1.0"
description = "Agendamientos de codebase."
authors = [
    "Federico Cardozo <fedecar94@outlook.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.8"
homepage = "https://github.com/fedecar94/codebase"
repository = "https://github.com/fedecar94/codebase"
documentation = "https://github.com/fedecar94/codebase"

keywords = ["codebase", "django", "rest", "api"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements

[dev-dependencies]
black = { version = "^21.6b0", python = "^3.8" }

[tool.black]
line-length = 120
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
